--- a/index.html
+++ b/index.html
@@ -400,6 +400,22 @@
                     <i class="bi bi-geo-alt"></i>
                     Hyderabad, TG, India
                   </a>
+                  <a href="#" class="contact-item">
+                    <i class="bi bi-geo-alt"></i>
+                    7+ years in tech & delivery
+                  </a>
+                  <a href="#" class="contact-item">
+                    <i class="bi bi-geo-alt"></i>
+                    Worked with startups & businesses
+                  </a>
+                  <a href="#" class="contact-item">
+                    <i class="bi bi-geo-alt"></i>
+                    Website, data & domain expertise
+                  </a>
+                  <a href="#" class="contact-item">
+                    <i class="bi bi-geo-alt"></i>
+                    Content creator on YouTube
+                  </a>
                 </div>
               </div>
             </div>
