--- a/services.html
+++ b/services.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services | Reema Roy | IT Consultant, Website Developer & Digital Creator</title>
-  <meta name="description" content="Reema Roy provides IT consulting, data migration, website development, and shares trusted skincare, travel & tech     recommendations through blogs and YouTube.">
+  <title>Services | Reema Roy – Website, Consulting & Technical PM</title>
+  <meta name="description" content="Explore services by Reema Roy including website development, migration, domain & hosting consulting, technical project management, and business consulting.">
   <meta name="author" content="Reema Roy">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
   <!-- CANONICAL -->
-  <link rel="canonical" href="https://www.reemaroy.com/">
+  <link rel="canonical" href="https://www.reemaroy.com/services">
 
   <!-- OPEN GRAPH -->
   <meta property="og:type" content="website">
@@ -88,36 +88,12 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h1>Services</h1>
+        <p>I help businesses, founders, and professionals build, migrate, and manage websites while delivering technical projects with clarity, structure, and long-term stability.</p>
+        <p>My services combine technical understanding with business-focused execution, so decisions are practical, scalable, and aligned with real goals.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="service-header">
-          <div class="row align-items-center">
-            <div class="col-lg-8 col-md-12">
-              <div class="service-intro">
-                <h2 class="service-heading">
-                  <div>Comprehensive IT Services</div>
-                  <div><span>to Elevate Your Business</span></div>
-                </h2>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12">
-              <div class="service-summary">
-                <p>
-                  We integrate forward-thinking strategies, creative approaches, and state-of-the-art technologies to deliver exceptional customer experiences that drive growth and engage target markets.
-                </p>
-                <a href="services.html" class="service-btn">
-                  View All Services
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
@@ -132,9 +108,28 @@
                   Website <span>Development</span>
                 </a>
               </h3>
-              <p>
-                Custom-built websites for businesses and individuals, designed for performance, scalability, and user engagement.
-              </p>
+              <h5>
+                What problem this solves
+              </h5>
+              <p>Many websites look fine on the surface but lack structure, performance, or
+clarity — making them hard to scale, maintain, or optimize.</p>
+              <h5>Who this is for</h5>
+              <li>Startups and founders</li>
+              <li>Personal brands and professionals</li>
+              <li>Small and growing businesses</li>
+              <li>Anyone needing a reliable, fast website</li>
+
+              <h5>What I offer</h5>
+              <li>Static websites (fast, lightweight, secure)</li>
+              <li>WordPress and CMS-based websites</li>
+              <li>SEO-friendly structure</li>
+              <li>Performance-focused setup</li>
+              <li>Clean navigation and content flow</li>
+
+              <h5>Outcome</h5>
+              <li>A structured, scalable website</li>
+              <li>Improved performance and usability</li>
+              <li>A strong foundation for growth and content</li>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
