--- a/services.html
+++ b/services.html
@@ -110,12 +110,14 @@
               </h5>
               <p>Many websites look fine on the surface but lack structure, performance, or
 clarity — making them hard to scale, maintain, or optimize.</p>
+              <br>
               <h5>Who this is for</h5>
               <li>Startups and founders</li>
               <li>Personal brands and professionals</li>
               <li>Small and growing businesses</li>
               <li>Anyone needing a reliable, fast website</li>
 
+              <br>
               <h5>What I offer</h5>
               <li>Static websites (fast, lightweight, secure)</li>
               <li>WordPress and CMS-based websites</li>
@@ -123,6 +125,7 @@ clarity — making them hard to scale, maintain, or optimize.</p>
               <li>Performance-focused setup</li>
               <li>Clean navigation and content flow</li>
 
+              <br>
               <h5>Outcome</h5>
               <li>A structured, scalable website</li>
               <li>Improved performance and usability</li>
@@ -139,9 +142,32 @@ clarity — making them hard to scale, maintain, or optimize.</p>
                   Website & <span>Data Migration</span>
                 </a>
               </h3>
+              <h5>
+                What problem this solves
+              </h5>
               <p>
-                Praesent euismod varius tellus, vel bibendum nunc interdum at. Donec vehicula diam vel metus venenatis convallis. Aliquam erat volutpat. Etiam viverra magna sit amet.
+                Poorly handled migrations often lead to broken pages, lost data, downtime, and SEO damage.
               </p>
+              <br>
+              <h5>Who this is for</h5>
+                <li>Businesses changing hosting providers</li>
+                <li>CMS migrations (WordPress, static, etc.)</li>
+                <li>Domain changes or restructuring</li>
+                <li>Teams facing performance or cost issues</li>
+
+              <br>
+              <h5>What I offer</h5>
+                <li>Migration planning and assessment</li>
+                <li>Website and content migration</li>
+                <li>CMS and platform transitions</li>
+                <li>Domain change handling</li>
+                <li>Minimal-downtime execution</li>
+
+              <br>
+              <h5>Outcome</h5>
+              <li>Safe, structured migration</li>
+              <li>Preserved content and SEO signals</li>
+              <li>Improved website stability and speed</li>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
@@ -154,9 +180,32 @@ clarity — making them hard to scale, maintain, or optimize.</p>
                   Domain & <span>Hosting Consulting</span>
                 </a>
               </h3>
+              <h5>
+                What problem this solves
+              </h5>
               <p>
-                Vivamus tempor velit id magna dictum, sed fermentum nisi faucibus. Integer nec pretium sapien. Fusce tincidunt ligula et purus consequat, ac pellentesque nulla eleifend.
+                Incorrect domain or hosting choices can lead to security risks, unnecessary costs, and future limitations.
               </p>
+              <br>
+              <h5>Who this is for</h5>
+                <li>First-time website owners</li>
+                <li>Businesses planning a new website</li>
+                <li>Teams confused by hosting options</li>
+                <li>Founders who want guidance without upselling</li>
+
+              <br>
+              <h5>What I offer</h5>
+                <li>Domain selection and planning</li>
+                <li>Hosting provider recommendations</li>
+                <li>Setup and configuration guidance</li>
+                <li>Security and best-practice advice</li>
+                <li>Scalability and future-readiness planning</li>
+
+              <br>
+              <h5>Outcome</h5>
+              <li>Correct technical decisions from the start</li>
+              <li>Reduced long-term costs</li>
+              <li>Secure and reliable website foundation</li>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -169,9 +218,31 @@ clarity — making them hard to scale, maintain, or optimize.</p>
                   Business & <span>Website Consulting</span>
                 </a>
               </h3>
+               <h5>
+                What problem this solves
+              </h5>
               <p>
-                Cras fermentum odio eu feugiat malesuada. Vestibulum ante ipsum primis in faucibus orci luctus et accumsan cursus. Morbi placerat nulla vel nunc viverra accumsan.
+                Many businesses know something isn’t working — but don’t know what to fix, prioritize, or invest in.
               </p>
+              <br>
+              <h5>Who this is for</h5>
+                <li>Businesses unsure why their website underperforms</li>
+                <li>Founders planning improvements or rebuilds</li>
+                <li>Teams needing technical clarity for decisions</li>
+              
+              <br>
+              <h5>What I offer</h5>
+                <li>Website audits and assessments</li>
+                <li>Technical and structural recommendations</li>
+                <li>Improvement roadmaps</li>
+                <li>Business-aligned technical guidance</li>
+                <li>Ongoing advisory support</li>
+
+              <br>
+              <h5>Outcome</h5>
+              <li>Clear direction and next steps</li>
+              <li>Smarter, confident decisions</li>
+              <li>Improved website effectiveness</li>
             </div>
           </div>
         </div>
