--- a/services.html
+++ b/services.html
@@ -245,11 +245,73 @@ clarity — making them hard to scale, maintain, or optimize.</p>
               <li>Improved website effectiveness</li>
             </div>
           </div>
+           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <i class="bi bi-code-slash"></i>
+              </div>
+              <h3>
+                <a href="service-details.html">
+                  Technical <span>Project Management</span>
+                </a>
+              </h3>
+               <h5>
+                What problem this solves
+              </h5>
+              <p>
+                Projects often fail due to unclear timelines, scope creep, and misalignment between business and technical teams.
+              </p>
+              <br>
+              <h5>Who this is for</h5>
+                <li>Startups and tech-driven businesses</li>
+                <li>Teams running website or digital projects</li>
+                <li>Clients managing developers and vendors</li>
+                <li>Organizations needing structured delivery</li>
+              
+              <br>
+              <h5>What I offer</h5>
+                <li>End-to-end project coordination</li>
+                <li>Timeline and milestone planning</li>
+                <li>Risk and dependency management</li>
+                <li>Cross-team communication</li>
+                <li>Stakeholder alignment and reporting</li>
+
+              <br>
+              <h5>Outcome</h5>
+              <li>Predictable project execution</li>
+              <li>Reduced confusion and delays</li>
+              <li>Clear ownership and accountability</li>
+            </div>
+          </div>
         </div>
 
       </div>
 
     </section><!-- /Services Section -->
+    <div class="service-header">
+          <div class="row align-items-center">
+            <div class="col-lg-8 col-md-12">
+              <div class="service-intro">
+                <h2 class="service-heading">
+                  <h2>How to Get Started</h2>
+                </h2>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-12">
+              <div class="service-summary">
+                <p>If you’re looking for support with website development, migration, technical project delivery, or consulting, you can reach out to discuss your requirements and explore the best approach.</p>
+                <a href="/contact" class="service-btn">
+                  Contact Me
+                  <i class="bi bi-arrow-right"></i>
+                </a>
+                <a href="/resume" class="service-btn">
+                  View Resume
+                  <i class="bi bi-arrow-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
     </main>
 
   <div id="footer-placeholder"></div>
