--- a/services.html
+++ b/services.html
@@ -298,14 +298,14 @@ clarity — making them hard to scale, maintain, or optimize.</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-12">
+              <p>If you’re looking for support with website development, migration, technical project delivery, or consulting, you can reach out to discuss your requirements and explore the best approach.</p>
               <div class="service-summary">
-                <p>If you’re looking for support with website development, migration, technical project delivery, or consulting, you can reach out to discuss your requirements and explore the best approach.</p>
                 <a href="/contact" class="service-btn">
-                  Contact Me
+                  👉 Contact Me
                   <i class="bi bi-arrow-right"></i>
                 </a>
                 <a href="/resume" class="service-btn">
-                  View Resume
+                  👉 View Resume
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
