--- a/services.html
+++ b/services.html
@@ -288,16 +288,17 @@ clarity — making them hard to scale, maintain, or optimize.</p>
       </div>
 
     </section><!-- /Services Section -->
+    <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
     <div class="service-header">
           <div class="row align-items-center">
-            <div class="col-lg-8 col-md-12">
+            <div class="col-lg-4 col-md-12">
               <div class="service-intro">
                 <h2 class="service-heading">
                   <h2>How to Get Started</h2>
                 </h2>
               </div>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-8 col-md-12">
               <p>If you’re looking for support with website development, migration, technical project delivery, or consulting, you can reach out to discuss your requirements and explore the best approach.</p>
               <div class="service-summary">
                 <a href="/contact" class="service-btn">
@@ -313,7 +314,19 @@ clarity — making them hard to scale, maintain, or optimize.</p>
           </div>
         </div>
     </main>
-
+<style>
+  a.service-btn {
+    display: inline-flex;
+    align-items: center;
+    padding: 12px 30px;
+    background-color: var(--accent-color);
+    color: var(--contrast-color);
+    border-radius: 4px;
+    font-weight: 500;
+    transition: all 0.3s ease;
+  }
+  </style>
+  
   <div id="footer-placeholder"></div>
 
   <!-- Scroll Top -->
