--- a/services.html
+++ b/services.html
@@ -313,6 +313,19 @@ clarity — making them hard to scale, maintain, or optimize.</p>
             </div>
           </div>
         </div>
+
+      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-header">
+          <div class="row align-items-center">
+            <div class="col-md-12">
+              <div class="service-intro">
+                  <p>All services are delivered with a focus on clarity, communication, and practical outcomes — not unnecessary complexity.</p>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+            
     </main>
 <style>
   a.service-btn {
