--- a/services.html
+++ b/services.html
@@ -301,7 +301,7 @@ clarity — making them hard to scale, maintain, or optimize.</p>
             <div class="col-lg-8 col-md-12">
               <p>If you’re looking for support with website development, migration, technical project delivery, or consulting, you can reach out to discuss your requirements and explore the best approach.</p>
               <div class="service-summary">
-                <a href="/contact" class="service-btn">
+                <a href="/contact" class="service-btn" style="margin-bottom: 10px;">
                   👉 Contact Me
                   <i class="bi bi-arrow-right"></i>
                 </a>
@@ -314,7 +314,14 @@ clarity — making them hard to scale, maintain, or optimize.</p>
           </div>
         </div>
 
-      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" style="
+    background: #fee9e1;
+    color: black;
+    padding-top: 15px;
+    text-align: center;
+    border-radius: 10px;
+    padding-bottom: 10px;
+    margin-top: 10px;">
         <div class="service-header">
           <div class="row align-items-center">
             <div class="col-md-12">
