--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 <h4>
                   Ashwani Mishra | Co-Founder & CEO | BlinkCMS & Hocalwire
                 </h4>
-                <p><q>Reema has worked with Hocalwire for more than 4 years and she has contributed to the growth of organization in commendable manner.
+                <p style="font-style: italic;"><q>Reema has worked with Hocalwire for more than 4 years and she has contributed to the growth of organization in commendable manner.
                 <br>She started her career as an executed and climbed the lader to become Sr Manager in mere few years was applaudable.
                 <br>She has handled significant parallel projects and team and develivered beyond expectation.    
                 <br>She was great at managing support team as well as front facing the clients.                    
@@ -441,7 +441,7 @@
                 <h4>
                   Praveen Kumar Sahu | Product Lead – Platform, Growth & Monetization | TV9
                 </h4>
-                <p><q>I had the pleasure of working closely with Reema on the development of news9live.com, and I can confidently say that her contributions were crucial to the project’s success. From the start to the end of the full project lifecycle, she was deeply involved in every key aspect.
+                <p style="font-style: italic;"><q>I had the pleasure of working closely with Reema on the development of news9live.com, and I can confidently say that her contributions were crucial to the project’s success. From the start to the end of the full project lifecycle, she was deeply involved in every key aspect.
                 <br>Reema demonstrated an exceptional ability to navigate complex challenges and consistently delivered high-quality work. Her expertise and dedication were evident as we worked through feedback cycles and iterative improvements to refine the site. She also played a pivotal role in training the editorial team, ensuring a smooth transition to the new platform.
                 <br>Her problem-solving skills, attention to detail, and collaborative spirit made her an invaluable team member throughout the entire process. I would highly recommend Reema for any future projects, as she is not only skilled but also a pleasure to work with.</q></p>
             </div>
@@ -456,45 +456,33 @@
     <section id="stats" class="stats section light-background">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row justify-content-center">
-          <div class="col-lg-10">
-            <div class="stats-wrapper">
-              <div class="stats-item" data-aos="zoom-in" data-aos-delay="150">
-                <div class="icon-wrapper">
-                  <i class="bi bi-emoji-smile"></i>
-                </div>
-                <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Happy Clients</p>
-              </div><!-- End Stats Item -->
-
-              <div class="stats-item" data-aos="zoom-in" data-aos-delay="200">
-                <div class="icon-wrapper">
-                  <i class="bi bi-journal-richtext"></i>
-                </div>
-                <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Projects</p>
-              </div><!-- End Stats Item -->
-
-              <div class="stats-item" data-aos="zoom-in" data-aos-delay="250">
-                <div class="icon-wrapper">
-                  <i class="bi bi-headset"></i>
-                </div>
-                <span data-purecounter-start="0" data-purecounter-end="288" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hours Of Support</p>
-              </div><!-- End Stats Item -->
-
-              <div class="stats-item" data-aos="zoom-in" data-aos-delay="300">
-                <div class="icon-wrapper">
-                  <i class="bi bi-people"></i>
-                </div>
-                <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hard Workers</p>
-              </div><!-- End Stats Item -->
-            </div>
-          </div>
-        </div>
-
+          <div class="col-lg-10" style="
+          text-align: center;">
+        
+        <h2>About Me</h2>
+        <p style="font-style: italic;">
+        Hi, I’m Reema Roy — a Technical Project Manager and Website Consultant.
+        I work with businesses and founders to plan, build, and manage websites
+        that are structured, scalable, and aligned with real business goals.
+        </p>
+        
+        <p style="font-style: italic;">
+        With hands-on experience across website development, migration, domain and
+        hosting setup, and technical delivery, I help teams move from confusion to
+        clarity and execution.
+        </p>
+        <a href="/about" class="service-btn" style="
+        display: inline-flex;
+        align-items: center;
+        padding: 12px 30px;
+        background-color: var(--accent-color);
+        color: var(--contrast-color);
+        border-radius: 4px;
+        font-weight: 500;
+        transition: all 0.3s ease;">
+          Learn more about my work
+        </a>
       </div>
 
     </section><!-- /Stats Section -->
