--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <div class="hero-text">
                 <h1>Reema<span class="accent-text">Roy</span></h1>
                 <p class="lead">I'm a <span class="typed" data-typed-items="Technical Project Manager, IT Consultant, Website Developer, Digital Creator"></span></p>
-                <p class="description">I help businesses build, migrate, and manage websites while delivering projects with clarity, structure, and performance.</p>
+                <p class="description">I help businesses build, migrate, and manage websites with structure, clarity, and performance.</p>
                 
 
                 <div class="hero-actions">
