--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Featured Content</h2>
+        <h2>Insights & Resources</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
