--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <div class="hero-text">
                 <h1>Reema<span class="accent-text">Roy</span></h1>
                 <p class="lead">I'm a <span class="typed" data-typed-items="Technical Project Manager, IT Consultant, Website Developer, Digital Creator"></span></p>
-                <p class="description">I help businesses build, migrate, and manage websites while delivering projects with clarity, structure, and performance.</p>
+                <p class="description">I help founders and businesses transform their digital presence with structured websites, smooth migrations, and seamless technical delivery.</p>
                 
 
                 <div class="hero-actions">
@@ -224,6 +224,7 @@
               <h3>
                   Website Development & Migration
               </h3>
+              <h5>Build scalable digital platforms</h5>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
@@ -231,6 +232,7 @@
               <h3>
                   Technical Project / Delivery Management
               </h3>
+              <h5>Deliver projects on time</h5>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
@@ -238,6 +240,7 @@
               <h3>
                   Business & Website Consulting
               </h3>
+              <h5>Strategy, audits, clarity</h5>
             </div>
           </div>
         </div>
