--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 <div class="hero-actions">
                   <a href="/services" class="btn btn-primary">Work With Me</a>
-                  <a href="/resume" class="btn btn-outline">View Experience</a>
+                  <a href="/resume" class="btn btn-outline">View My Experience</a>
                 </div>
 
                 <div class="social-links">
@@ -202,7 +202,7 @@
         border-radius: 4px;
         font-weight: 500;
         transition: all 0.3s ease;">
-          Learn more about my work
+          Learn more about my background
         </a>
       </div>
 
@@ -297,6 +297,7 @@
                 </div>
                 <h4>HPBL News</h4>
                 <h5>Data Migration</h5>
+                <p>Successfully migrated the website's data from Hocalwire platform to WordPress with minimal downtime while preserving content structure and stability.</p>
               </div><!-- End Stats Item -->
 
               <div class="stats-item" data-aos="zoom-in" data-aos-delay="200">
@@ -305,6 +306,7 @@
                 </div>
                 <h4>Mystic Mansion Realty </h4>
                 <h5>Website Development</h5>
+                <p>Delivered a structured, performance-focused website that supported the client’s business goals and improved long-term maintainability.</p>
               </div><!-- End Stats Item -->
 
               <div class="stats-item" data-aos="zoom-in" data-aos-delay="250">
@@ -313,6 +315,7 @@
                 </div>
                 <h4>The Oorza</h4>
                 <h5>Website Development</h5>
+                <p>Built a structured, performance-focused e-commerce website aligned with the client’s business goals, ensuring smooth payment integration and long-term maintainability.</p>
               </div><!-- End Stats Item -->
 
               <div class="stats-item" data-aos="zoom-in" data-aos-delay="300">
@@ -321,11 +324,18 @@
                 </div>
                 <h4>Hocalwire</h4>
                 <h5>Platform Consultancy</h5>
+                <p>Provided technical and website consulting that helped the client gain clarity on next steps and make informed digital decisions.</p>
               </div><!-- End Stats Item -->
             </div>
           </div>
         </div>
 
+      </div>
+
+      <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+        <h3>Interested in working together?</h3>
+          <p>If you’re planning a website, migration, or technical project, let’s discuss how I can help.</p>
+            <a href="/contact" class="primary-cta">Start a conversation</a>
       </div>
 
     </section><!-- /Projects Section -->
