--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
             <div class="stats-item" data-aos="zoom-in" data-aos-delay="150">
               <div class="icon-wrapper">
-                <img src="assets/img/projects/hpbl-news.webp" alt="HPBL News Project" class="img-fluid rounded">
+                <img src="assets/img/projects/hpbl-news.webp" alt="HPBL News Project" class="img-fluid rounded" style="background: white;">
               </div>
               <h3>HPBL News</h3>
               <h5 style="background: #595656; border-radius: 5px;">Data Migration</h5>
@@ -334,7 +334,7 @@
 
           <div class="stats-item" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-wrapper">
-              <img src="assets/img/projects/mmr.webp" alt="Mystic Mansion Realty Project" class="img-fluid rounded">
+              <img src="assets/img/projects/mmr.webp" alt="Mystic Mansion Realty Project" class="img-fluid rounded" style="background: white;">
             </div>
             <h3>Mystic Mansion Realty</h3>
             <h5 style="background: #595656; border-radius: 5px;">Website Development</h5>
@@ -345,7 +345,7 @@
 
           <div class="stats-item" data-aos="zoom-in" data-aos-delay="250">
             <div class="icon-wrapper">
-              <img src="assets/img/projects/the-oorza.webp" alt="The Oorza Project" class="img-fluid rounded">
+              <img src="assets/img/projects/the-oorza.webp" alt="The Oorza Project" class="img-fluid rounded" style="background: white;">
             </div>
             <h3>The Oorza</h3>
             <h5 style="background: #595656; border-radius: 5px;">E-commerce Website Development</h5>
@@ -356,7 +356,7 @@
 
           <div class="stats-item" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-wrapper">
-              <img src="assets/img/projects/hocalwire.webp" alt="Hocalwire Consulting Project" class="img-fluid rounded">
+              <img src="assets/img/projects/hocalwire.webp" alt="Hocalwire Consulting Project" class="img-fluid rounded" style="background: white;">
             </div>
             <h3>Hocalwire</h3>
             <h5 style="background: #595656; border-radius: 5px;">Platform & Technical Consulting</h5>
