--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
               <p>
                   BizzNist has been instrumental in customizing my eCommerce website and seamlessly integrating the payment gateway. Their expertise, prompt support, and attention to detail made the entire process smooth and hassle-free. I highly recommend their services to anyone looking for reliable IT solutions. Thank you, BizzNist, for your exceptional work!                </p>
               <div class="client-info">
-                <div class="client-image">
+                <div class="client-image" style="background: white;">
                   <img src="assets/img/projects//mmr.webp" alt="Client">
                 </div>
                 <div class="client-details">
