--- a/resume.html
+++ b/resume.html
@@ -214,7 +214,7 @@
     
                 <!-- Education Section -->
                 <div class="resume-section" data-aos="fade-up" data-aos-delay="100">
-                  <h3><i class="bi bi-mortarboard me-2"></i>Education</h3>
+                  <h3>Education</h3>
     
                   <div class="resume-item">
                     <h4>Master’s in Public Administration</h4>
