--- a/contact.html
+++ b/contact.html
@@ -123,9 +123,12 @@
   </header>
   <main class="main">
 
-       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
+<section id="contact" class="contact section">
+
+      <!-- Section Title -->
+      <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+        <h2>Let’s build something meaningful together</h2>
+        <p>Whether you’re planning a new website, a migration, or need technical clarity, I’d love to hear about your goals and challenges.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -133,15 +136,25 @@
         <div class="row g-4 g-lg-5">
           <div class="col-lg-5">
             <div class="info-box">
-              <h3>Contact Info</h3>
+              <h3>Get in touch</h3>
 
+                <div class="info-item">
+                <div class="icon-box">
+                  <i class="bi bi-envelope"></i>
+                </div>
+                <div class="content">
+                  <h4>Email Address</h4>
+                  <p>royreema1997@gmail.com</p>
+                </div>
+              </div>
+              
               <div class="info-item">
                 <div class="icon-box">
                   <i class="bi bi-geo-alt"></i>
                 </div>
                 <div class="content">
                   <h4>Location</h4>
-                  <p>Hyderabad, TG, India</p>
+                  <p>India (working with clients globally)</p>
                 </div>
               </div>
 
@@ -155,22 +168,14 @@
                 </div>
               </div>
 
-              <div class="info-item">
-                <div class="icon-box">
-                  <i class="bi bi-envelope"></i>
-                </div>
-                <div class="content">
-                  <h4>Email Address</h4>
-                  <p>royreema1997@gmail.com</p>
-                </div>
-              </div>
+            
             </div>
           </div>
 
           <div class="col-lg-7">
             <div class="contact-form">
-              <h3>Get In Touch</h3>
-              <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis.</p>
+              <h3>Start the conversation</h3>
+              <p>Tell me a bit about your project, and I’ll get back to you soon.</p>
 
               <form action="forms/contact.php" method="post" class="php-email-form">
                 <div class="row gy-4">
@@ -209,7 +214,7 @@
 
       </div>
 
-    </section><!-- /Contact Section -->
+    </section>
 
   </main>
 
