--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,8 @@
       <!-- Section Title -->
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
         <h2>Let’s build something meaningful together</h2>
-        <p>Whether you’re planning a new website, a migration, or need technical clarity, I’d love to hear about your goals and challenges.</p>
+        <p>Whether you’re planning a new website, a migration, or need technical clarity,</p>
+        <p>I’d love to hear about your goals and challenges.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -203,18 +204,54 @@
 
                     <button type="submit" class="btn">Send Message</button>
                   </div>
-
                 </div>
               </form>
-
             </div>
           </div>
-
         </div>
-
       </div>
-
     </section>
+
+        <!-- About Section -->
+    <section id="about" class="about section">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row">
+        <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+            <h2>Let’s build something meaningful together</h2>
+          </div>
+
+              <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+                <div class="profile-card">
+                  <h5>Website design & development</h5>
+                </div>
+              </div>
+
+              <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+                <div class="profile-card">
+                    <h5>Website migration & CMS setup</h5>
+                </div>
+              </div>
+
+              <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+                <div class="profile-card">
+                    <h5>Performance, SEO & optimization</h5>
+                </div>
+              </div>
+
+              <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200" style="padding-top: 20px;">
+                <div class="profile-card">
+                    <h5>Technical & platform consulting</h5>
+                </div>
+              </div>
+
+              <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200" style="padding-top: 20px;">
+                <div class="profile-card">
+                    <h5>Product and digital strategy</h5>
+                </div>
+              </div>
+        </div>
+      </div>
+    </section><!-- /About Section -->
 
   </main>
 
