--- a/contact.html
+++ b/contact.html
@@ -217,7 +217,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
         <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-            <h2>Let’s build something meaningful together</h2>
+            <h2>How I can help</h2>
           </div>
 
               <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
@@ -252,6 +252,32 @@
         </div>
       </div>
     </section><!-- /About Section -->
+
+    <section id="about" class="about section">
+      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+        <div class="row">
+          <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+            <h2>What happens next?</h2>
+              <ul style="padding-left: 0px;">
+                <p>I review your message within 24–48 hours</p>
+                <p>If it’s a good fit, we schedule a short discussion</p>
+                <p>You receive clear recommendations and next steps</p>
+              </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="about section">
+      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+        <div class="row">
+          <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+              <h3>Not sure where to start?</h3>
+              <p>That’s completely okay. Share what you have in mind, and we’ll take it from there.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
 
