--- a/contact.html
+++ b/contact.html
@@ -254,11 +254,11 @@
     </section><!-- /About Section -->
 
     <section id="about" class="about section">
-      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" style="padding-bottom: 0px;">
         <div class="row">
           <div class="container section-title aos-init aos-animate" data-aos="fade-up">
             <h2>What happens next?</h2>
-              <ul style="padding-left: 0px;">
+              <ul style="padding-left: 0px;margin-bottom: 0px;">
                 <p>I review your message within 24–48 hours</p>
                 <p>If it’s a good fit, we schedule a short discussion</p>
                 <p>You receive clear recommendations and next steps</p>
@@ -271,7 +271,7 @@
     <section id="about" class="about section">
       <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
-          <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+          <div class="container section-title aos-init aos-animate" data-aos="fade-up" style="padding-bottom: 0px;">
               <h3>Not sure where to start?</h3>
               <p>That’s completely okay. Share what you have in mind, and we’ll take it from there.</p>
           </div>
