--- a/contact.html
+++ b/contact.html
@@ -254,9 +254,9 @@
     </section><!-- /About Section -->
 
     <section id="about" class="about section">
-      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" style="padding-bottom: 0px;">
+      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
-          <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+          <div class="container section-title aos-init aos-animate" data-aos="fade-up" style="padding-bottom: 0px;">
             <h2>What happens next?</h2>
               <ul style="padding-left: 0px;margin-bottom: 0px;">
                 <p>I review your message within 24–48 hours</p>
