--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   }
 </script>
 
-    <script type="application/ld+json">
+  <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
@@ -85,7 +85,23 @@
   }
   </script>
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Reema Roy",
+    "url": "https://www.reemaroy.com",
+    "sameAs": [
+      "https://www.youtube.com/@iamreemaroy",
+      "https://www.linkedin.com/in/iamreemaroy/",
+      "https://www.instagram.com/iamreemaroyy",
+      "https://x.com/iamreemaroy"
+      "https://linktr.ee/iamreemaroy"
+    ]
+  }
+</script>
 
+</script>
 </head>
 
 <body class="index-page">
