--- a/services.html
+++ b/services.html
@@ -288,18 +288,18 @@ clarity — making them hard to scale, maintain, or optimize.</p>
       </div>
 
     </section><!-- /Services Section -->
-    <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-    <div class="service-header">
-          <div class="row align-items-center">
-            <div class="col-lg-4 col-md-12">
+    <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" style="align-items: center; text-align: center;">
+    <div class="col-md-12">
               <div class="service-intro">
                 <h2 class="service-heading">
-                  <h2>How to Get Started</h2>
-                </h2>
+                  </h2><h2>How to Get Started</h2>
               </div>
             </div>
-            <div class="col-lg-8 col-md-12">
-              <p>If you’re looking for support with website development, migration, technical project delivery, or consulting, you can reach out to discuss your requirements and explore the best approach.</p>
+      
+        <div class="service-header">
+          <div class="row align-items-center">
+            <div class="col-md-12">
+              <p style="padding-left: 130px; padding-right: 130px;">If you’re looking for support with website development, migration, technical project delivery, or consulting, you can reach out to discuss your requirements and explore the best approach.</p>
               <div class="service-summary">
                 <a href="/contact" class="service-btn" style="margin-bottom: 10px;">
                   👉 Contact Me
@@ -315,13 +315,13 @@ clarity — making them hard to scale, maintain, or optimize.</p>
         </div>
 
       <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" style="
-    background: #fee9e1;
-    color: black;
-    padding-top: 15px;
-    text-align: center;
-    border-radius: 10px;
-    padding-bottom: 10px;
-    margin-top: 30px;">
+          background: #fee9e1;
+          color: black;
+          padding-top: 15px;
+          text-align: center;
+          border-radius: 10px;
+          padding-bottom: 10px;
+          margin-top: 30px;">
         <div class="service-header">
           <div class="row align-items-center">
             <div class="col-md-12">
@@ -332,8 +332,10 @@ clarity — making them hard to scale, maintain, or optimize.</p>
             </div>
           </div>
         </div>
+    </div>
             
     </main>
+  
 <style>
   a.service-btn {
     display: inline-flex;
